--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
+/* 这里是一些 CSS 的一些常用语句模板，根据需要修改即可 */
+
 /* 网页无边距 */
 html,
 body {
@@ -5,10 +7,20 @@ body {
   margin: 0;
 }
 
+/* 主题颜色 */
+:root {
+  --text-light: palevioletred;
+  --text-dark: pink;
+  --link-light: cornflowerblue;
+  --link-dark: skyblue;
+  color-scheme: light dark;
+}
+
 /* 图片引入示例和常见字体 */
 body {
-  background: #222 url("../images/baseline_brightness_1_black_18dp.png") repeat
+  background: #eee url("../images/baseline_brightness_1_white_18dp.gif") repeat
     center;
+  color: var(--text-light);
   font-family: "Source Han Sans", "Noto Sans CJK", "Microsoft YaHei UI",
     "Microsoft YaHei", "Microsoft JhengHei UI", "Microsoft JhengHei",
     "PingFang SC", "PingFang TC", "PingFang HK", "Apple LiGothic", "Meiryo",
@@ -16,39 +28,39 @@ body {
   font-weight: lighter;
 }
 
-/* 主题颜色 */
-:root {
-  color-scheme: light dark;
-  background: white;
-  color: black;
-}
-
-/* 自动匹配系统暗色模式 */
-@media (prefers-color-scheme: dark) {
-  :root {
-    background: black;
-    color: white;
-  }
-}
-
 /* h1 中显示的文本 */
 #helloworld {
-  color: #FF0;
   font-weight: lighter;
   margin-left: 20%;
+  margin-right: 20%;
 }
 
+/* 超链接 */
 #helloworld a {
-  color: skyblue;
+  color: var(--link-light);
   text-decoration: none;
 }
 
+/* 鼠标在超链接上 */
 #helloworld a:hover {
   color: pink;
+  text-decoration: underline;
 }
 
-/* 响应式布局 */
-@media screen and (max-width: 500px) {
+/* 自动匹配系统暗色模式：当暗色模式时 */
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #111 url("../images/baseline_brightness_1_black_18dp.gif")
+      repeat center;
+    color: var(--text-dark);
+  }
+  #helloworld a {
+    color: var(--link-dark);
+  }
+}
+
+/* 响应式布局: 当 显示宽度 ≤800 像素时 */
+@media screen and (max-width: 800px) {
   #helloworld {
     margin-left: 0%;
   }
